--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mapboxgl-legend",
+  "name": "geoc-mapbox-gl-legend",
   "version": "0.1.0",
   "description": "基于mapboxgl样式，生成图例",
-  "main": "index.js",
+  "main": "dist/mapbox-gl-legendx.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack/webpack.config.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://gitlab.geo-compass.com/xtgc/geo-util/mapboxgl-legend.git"
+    "url": "https://github.com/geocompass/geoc-mapbox-gl-legend"
   },
   "keywords": [
     "mapboxgl legend",
@@ -21,6 +21,7 @@
     "legend-mapboxgl"
   ],
   "author": "LH",
+  "homepage": "https://github.com/geocompass/geoc-mapbox-gl-legend",
   "license": "MIT",
   "devDependencies": {
     "eslint": "^7.2.0",
