--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geoc-mapbox-gl-legend",
-  "version": "1.0.0",
+  "version": "1.1.1",
   "description": "基于mapboxgl样式，生成图例",
   "main": "dist/mapbox-gl-legendx.js",
   "scripts": {
@@ -23,6 +23,12 @@
   "author": "LH",
   "homepage": "https://github.com/geocompass/geoc-mapbox-gl-legend",
   "license": "MIT",
+  "browser": {
+    "canvas": false,
+    "jsdom": false,
+    "jsdom/lib/jsdom/living/generated/utils": false,
+    "jsdom/lib/jsdom/utils": false
+  },
   "devDependencies": {
     "eslint": "^7.2.0",
     "eslint-config-egg": "^8.0.1",
