--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "geoc-mapbox-gl-legend",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "基于mapboxgl样式，生成图例",
-  "main": "dist/mapbox-gl-legendx.js",
+  "main": "dist/mapbox-gl-legend.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack/webpack.config.js",
